--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -1,23 +1,23 @@
-name: Waka Readme
+# name: Waka Readme
 
-on:
-  workflow_dispatch:
-  schedule:
-    # Runs at 00:00AM UTC
-    - cron: '0 0 * * *'
+# on:
+#   workflow_dispatch:
+#   schedule:
+#     # Runs at 00:00AM UTC
+#     - cron: '0 0 * * *'
 
-jobs:
-  update-readme:
-    name: Update this repo's README
-    runs-on: ubuntu-latest
-    steps:
-      - name: Profile Readme Development Stats
-        uses: anmol098/waka-readme-stats@master
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_PROJECTS: "False"
-          SHOW_LINES_OF_CODE: "True"
-          SHOW_LOC_CHART: "False"
-          SHOW_LANGUAGE: "True"
-          LOCALE: "en"
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+# jobs:
+#   update-readme:
+#     name: Update this repo's README
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Profile Readme Development Stats
+#         uses: anmol098/waka-readme-stats@master
+#         with:
+#           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+#           SHOW_PROJECTS: "False"
+#           SHOW_LINES_OF_CODE: "True"
+#           SHOW_LOC_CHART: "False"
+#           SHOW_LANGUAGE: "True"
+#           LOCALE: "en"
+#           GH_TOKEN: ${{ secrets.GH_TOKEN }}
